# pathetic-engine

./: CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conanfile.txt  run.bat  run.sh
public/components/: components.hpp
public/core/: assets.hpp  clock.hpp  event.hpp  input.hpp  node.hpp  scene.hpp  window.hpp
public/math/: vector2.hpp
public/render/: sprite.hpp  texture.hpp
src/: game.cpp
src/core/: assets.cpp  clock.cpp  input.cpp  node.cpp  scene.cpp  window.cpp
src/math/: vector2.cpp
src/render/: sprite.cpp  texture.cpp
